--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -160,24 +160,23 @@
                     <li style="font-weight:600;color:white">
                         @(culture == "ar" ? "تابعنا على" : "Follow us"):
                         @if (Model.About != null && Model.About.WhatsApp != null)
-                        {<a style="margin:4px;" href="@Model.About.WhatsApp" title="@(culture == "ar" ? "واتساب" : "Whatsapp")"><i class="fab fa-whatsapp"></i></a>}
+                        {<a style="margin:4px;" href="@Model.About.WhatsApp" title="@(culture == "ar" ? "واتساب" : "Whatsapp")"><i class="fab fa-whatsapp"></i> @(culture == "ar" ? "واتساب" : "Whatsapp")</a>}
                         @if (Model.About != null && Model.About.Facebook != null)
-                        {<a style="margin:4px;" href="@Model.About.Facebook" title="@(culture == "ar" ? "فيس بوك" : "Facebook")"><i class="fab fa-facebook"></i></a>}
+                        {<a style="margin:4px;" href="@Model.About.Facebook" title="@(culture == "ar" ? "فيس بوك" : "Facebook")"><i class="fab fa-facebook"></i> @(culture == "ar" ? "فيس بوك" : "Facebook")</a>}
                         @if (Model.About != null && Model.About.Twitter != null)
-                        {<a style="margin:4px;" href="@Model.About.Twitter" title="@(culture == "ar" ? "تويتر إكس" : "Twitter X")"><i class="fab fa-twitter"></i></a>
-                        }
+                        {<a style="margin:4px;" href="@Model.About.Twitter" title="@(culture == "ar" ? "تويتر إكس" : "Twitter X")"><i class="fab fa-twitter"></i> @(culture == "ar" ? "تويتر إكس" : "Twitter X")</a>}
                         @if (Model.About != null && Model.About.Instagram != null)
-                        {<a style="margin:4px;" href="@Model.About.Instagram" title="@(culture == "ar" ? "انستجرام" : "Instagram")"><i class="fab fa-instagram"></i></a>
+                        {<a style="margin:4px;" href="@Model.About.Instagram" title="@(culture == "ar" ? "انستجرام" : "Instagram")"><i class="fab fa-instagram"></i> @(culture == "ar" ? "انستجرام" : "Instagram")</a>
                         }
                         @if (Model.About != null && Model.About.YouTube != null)
-                        {<a style="margin:4px;" href="@Model.About.YouTube" title="@(culture == "ar" ? "يوتيوب" : "YouTube")"><i class="fab fa-youtube"></i></a>
+                        {<a style="margin:4px;" href="@Model.About.YouTube" title="@(culture == "ar" ? "يوتيوب" : "YouTube")"><i class="fab fa-youtube"></i> @(culture == "ar" ? "يوتيوب" : "YouTube")</a>
                         }
                         @if (Model.About != null && Model.About.SnapChat != null)
-                        {<a style="margin:4px;" href="@(Model.About != null ? Model.About.SnapChat : "#")" title="@(culture == "ar" ? "واتساب" : "SnapChat")"><i class="fab fa-snapchat"></i></a>
+                        {<a style="margin:4px;" href="@(Model.About != null ? Model.About.SnapChat : "#")" title="@(culture == "ar" ? "واتساب" : "SnapChat")"><i class="fab fa-snapchat"></i> @(culture == "ar" ? "واتساب" : "SnapChat")</a>
                         } @if (Model.About != null && Model.About.TikTok != null)
                         {
                             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-                            <a style="margin:4px;" href="@(Model.About != null ? Model.About.TikTok : "#")" title="@(culture == "ar" ? "تيكتوك" : "TikTok")">  <i class="bi bi-tiktok"></i></a>
+                            <a style="margin:4px;" href="@(Model.About != null ? Model.About.TikTok : "#")" title="@(culture == "ar" ? "تيكتوك" : "TikTok")">  <i class="bi bi-tiktok"></i> @(culture == "ar" ? "تيكتوك" : "TikTok")</a>
                         }
                     </li>
                 </ul>
