--- a/Cocoon/Views/Partials/WebsiteNavbar.cshtml
+++ b/Cocoon/Views/Partials/WebsiteNavbar.cshtml
@@ -22,7 +22,7 @@
         top: 10px;
         font-size: 24px;
         cursor: pointer;
-        color: #ff0000;
+        color: #fff;
     }
 </style>
 <nav class="main_nav fixed-top">
