--- a/Cocoon/Views/Users/SubAdmins.cshtml
+++ b/Cocoon/Views/Users/SubAdmins.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<G4Fit.Models.Domains.ApplicationUser>
+﻿@using G4Fit.Models.Enums;
+@model IEnumerable<G4Fit.Models.Domains.ApplicationUser>
 @{
     Layout = "~/Views/Dashboard/Layout.cshtml";
     ViewBag.Title = "مساعدي الادمن ";
@@ -24,6 +25,7 @@
                         <th>البريد الالكتروني</th>
                         <th>رقم الهاتف</th>
                         <th>العنوان</th>
+                        <th>الصلاحيات</th>
                         <th>تاريخ التسجيل</th>
                         <th>التحكم</th>
                     </tr>
@@ -61,6 +63,32 @@
                                 </td>*@
                             <td>
                                 @item.Address
+                            </td>
+                            <td>
+                                @if (item.Role == SubAdminRole.All)
+                                {
+                                    <span>جميع الصلاحيات</span>
+                                }
+                                else if (item.Role == SubAdminRole.Orders)
+                                {
+                                    <span>عرض قائمة الطلبات</span>
+                                }
+                                else if (item.Role == SubAdminRole.PromoCodes)
+                                {
+                                    <span>عرض كوبونات الخصم</span>
+                                }
+                                else if (item.Role == SubAdminRole.Users)
+                                {
+                                    <span>عرض قائمة المستخدمين</span>
+                                }
+                                else if (item.Role == SubAdminRole.Notifications)
+                                {
+                                    <span>عرض الإشعارات</span>
+                                }
+                                else
+                                {
+                                    <span>محتوى افتراضي أو خطأ في الصلاحية</span>
+                                }
                             </td>
                             <td>
                                 @{
